fetch pgp key from boltz server instead of github

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
@@ -14,7 +14,7 @@
     When BTCPay Server needs to create a Lightning invoice, instead of pulling an invoice from a connected Lightning node, it creates a Boltz Lightning -> Liquid swap for the same amount. When a customer pays the invoice, Boltz swaps the amount minus fees to your Liquid wallet. Liquid is the only option for this mode as it features reliably low network fees that make accepting even small Lightning payments economically viable.
 </p>
 
-<div class="d-flex flex-column gap-2">
+<div>
     <h4>Current Pair Info</h4>
     <partial name="Boltz/_Fees" model="FeesModel.Standalone"/>
 </div>
