--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -24,15 +24,10 @@
     <div class="alert alert-danger">
         <p>Daemon is not yet running</p>
     </div>
-
-    @if (BoltzService.Daemon.Error is not null)
-    {
-        <div class="alert alert-danger">@BoltzService.Daemon.Error</div>
-    }
 }
 else
 {
-    @if (BoltzService.Daemon.NodeError is not null)
+    @if (BoltzService.Daemon.NodeError is not null && Model.IsAdmin)
     {
         <div class="alert alert-danger">@BoltzService.Daemon.NodeError</div>
     }
