fix: reset errors after successfull startup

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    @if(Daemon.Error is not null)
+    @if(!string.IsNullOrEmpty(Daemon.Error))
     {
         <div class="alert alert-danger">
             @Daemon.Error
