--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -27,12 +27,6 @@
 }
 else
 {
-    @if (BoltzService.Daemon.NodeError is not null && Model.IsAdmin)
-    {
-        <div class="alert alert-danger">@BoltzService.Daemon.NodeError</div>
-    }
-
-
     var tooltip = Model.Tooltip;
 
     <div class="mt-4">
@@ -55,6 +49,20 @@ else
             </a>
         </div>
     </div>
+    @if (!string.IsNullOrEmpty(BoltzService.Daemon.NodeError) && Model.IsAdmin)
+    {
+        <div class="mt-3">
+            <button class="d-inline-flex align-items-center btn btn-link text-danger fw-semibold p-0" type="button" id="NodeDetailsButton" data-bs-toggle="collapse" data-bs-target="#NodeDetails" aria-expanded="false" aria-controls="NodeDetails">
+                <vc:icon symbol="caret-down"/>
+                <span class="ms-1">Error Details</span>
+            </button>
+            <div id="NodeDetails" class="collapse">
+                <div class="pt-3">
+                    <pre>@BoltzService.Daemon.NodeError</pre>
+                </div>
+            </div>
+        </div>
+    }
 
     <br>
     <div class="mt-4">
