fix: wording in boltz payment setup tab

--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
@@ -37,5 +37,5 @@
 </template>
 
 <div id="BoltzSetup" class="pt-3 tab-pane fade" role="tabpanel" aria-labelledby="LightningNodeType-Boltz">
-    hi
+    You can use Boltz to accept lightning payments without running a lightning node.
 </div>
