--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
@@ -30,12 +30,14 @@
         </div>
     </div>
 
-    @if(!string.IsNullOrEmpty(Daemon.Error))
+    @if (!string.IsNullOrEmpty(Daemon.Error))
     {
         <div class="alert alert-danger">
-            @Daemon.Error
+            Daemon not running: @Daemon.Error
         </div>
-    } else if (Daemon.Running)
+        <pre>@Daemon.RecentOutput</pre>
+    }
+    else if (Daemon.Running)
     {
         <p>
             Running Boltz Client @Daemon.CurrentVersion
@@ -51,7 +53,7 @@
         <div id="AdvancedSettings" class="collapse">
             <div class="form-group">
                 <label asp-for="Settings.GrpcUrl" class="form-label"></label>
-                <input asp-for="Settings.GrpcUrl" class="form-control" readonly="@boltzCredsSet"/>
+                <inpur asp-for="Settings.GrpcUrl" class="form-control" readonly="@boltzCredsSet"/>
                 <span asp-validation-for="Settings.GrpcUrl" class="text-danger"></span>
             </div>
 
@@ -78,8 +80,8 @@
                     <a asp-action="Admin" asp-route-logFile="@file.Name" asp-route-offset="@Model.Log.LogFileOffset">@file.Name</a>
                     <a asp-action="Admin" asp-route-logFile="@file.Name" asp-route-offset="@Model.Log.LogFileOffset" asp-route-download="true" class="mx-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
-                          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
-                          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+                            <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                            <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
                         </svg>
                     </a>
                 </li>
