--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Configuration.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Configuration.cshtml
@@ -8,8 +8,7 @@
     ViewData.SetActivePage("Boltz", "Configuration", "Configuration");
 
     var storeId = Context.GetImplicitStoreId();
-    var swapTypes = new List<string> { "Reverse", "Normal", "Both" };
-    var mode = Model.Settings.Mode;
+    var mode = Model.Settings?.Mode;
 }
 
 
@@ -19,9 +18,11 @@
         Model.ExistingWallets,
         nameof(ExistingWallet.Value),
         nameof(ExistingWallet.Name),
-        Model.Ln.Wallet,
+        Model.Ln?.Wallet,
         nameof(ExistingWallet.CurrencyName)
     );
+    var swapTypes = new SelectListItem[] { new ("Reverse", "reverse"), new ("Normal", "normal") , new ("Both", "")   };
+    var swapTypeList = new SelectList(swapTypes, nameof(SelectListItem.Value), nameof(SelectListItem.Text), Model.Ln?.SwapType);
 
     <form method="post" class="mt-3" id="autoswapForm">
         <div class="d-flex flex-row justify-content-between my-3">
@@ -38,7 +39,7 @@
 
         <div class="form-group mt-4">
             <label asp-for="Ln.SwapType" class="form-label">Swap Type</label>
-            <select asp-items="new SelectList(swapTypes, Model.Ln.SwapType)" asp-for="Ln.SwapType" class="form-select" id="swapType">
+            <select asp-items="swapTypeList" asp-for="Ln.SwapType" class="form-select" id="swapType">
             </select>
         </div>
         <div class="form-group" id="inboundInput">
