--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
@@ -14,146 +14,168 @@
     var chainRecommendation = Model.Recommendations?.Chain.FirstOrDefault();
 }
 
-<div class="d-grid gap-3">
-    @if (settings?.Mode == BoltzMode.Standalone)
-    {
-        var stats = BoltzClient.ParseStats(Model.Stats!);
-        stats.Insert(0, new Stat { Name = "Balance", Unit = Unit.Sat, Value = Model.StandaloneWallet?.Balance.Total });
-        <div class="widget">
-            <header>
-                <h4>Lightning Payments</h4>
-            </header>
-            <div class="d-flex flex-column gap-2 align-items-start">
-                <partial name="Boltz/_Fees" model="FeesModel.Standalone"/>
-                <h5 class="mb-0">Wallet</h5>
-                <partial name="Boltz/_Stats" model="stats"/>
-                <div class="btn-group gap-0">
-                    <button class="btn btn-secondary">Receive</button>
-                    <button class="btn btn-secondary">Send</button>
-                    <button class="btn btn-secondary">Show credentials</button>
-                </div>
-            </div>
-        </div>
-    }
-
-    @if (Model.Status is not null)
-    {
-        @if (Model.Ln is not null)
+@if (Model.SwapInfo != null)
+{
+    var type = Model.SwapInfo.ChainSwap != null ? SwapType.Chain : Model.SwapInfo.ReverseSwap != null ? SwapType.Reverse : SwapType.Submarine;
+    ViewData["Title"] = $"{type} Swap";
+    <h3 class="text-center mx-auto">@ViewData["Title"]</h3>
+    <partial name="_SwapInfoPartial" model="Model.SwapInfo"/>
+}
+else
+{
+    <div class="d-grid gap-3">
+        @if (settings?.Mode == BoltzMode.Standalone)
         {
-            var ln = new AutoSwapStatus { SwapperType = SwapperType.Lightning, Status = Model.Status.Lightning };
-            <div class="widget d-flex gap-3 flex-column">
-                <partial name="Boltz/_AutoSwapStatus" model="ln"/>
-                @if (Model.Recommendations is not null)
-                {
-                    <div>
-                        <h5>Recommendations</h5>
-                        <partial name="Boltz/_LightningRecommendations" model="Model.Recommendations.Lightning"></partial>
-                    </div>
-                }
+            var stats = BoltzClient.ParseStats(Model.Stats!);
 
-                @if (Model.Ln.SwapType != "normal")
-                {
-                    var fees = new FeesModel { Pair = new Pair { From = Currency.Btc, To = Model.Ln.Currency }, SwapType = SwapType.Reverse };
-                    <div>
-                        <h5>Reverse Swap Info</h5>
-                        <partial name="Boltz/_Fees" model="fees"/>
-                    </div>
-                }
+            var balance = Model.StandaloneWallet?.Balance;
+            var walletId = Model.StandaloneWallet?.Id;
+            if (balance?.Unconfirmed > 0)
+            {
+                stats.Insert(0, new Stat { Name = "Unconfirmed Balance", Unit = Unit.Sat, Value = balance.Unconfirmed });
+            }
+            stats.Insert(0, new Stat { Name = "Total Balance", Unit = Unit.Sat, Value = balance?.Total });
 
-                @if (Model.Ln.SwapType != "reverse")
-                {
-                    var fees = new FeesModel { Pair = new Pair { From = Model.Ln.Currency, To = Currency.Btc }, SwapType = SwapType.Submarine };
-                    <div>
-                        <h5>Submarine Swap Info</h5>
-                        <partial name="Boltz/_Fees" model="fees"/>
+            <div class="widget">
+                <header>
+                    <h4>Lightning Payments</h4>
+                </header>
+                <div class="d-flex flex-column gap-2 align-items-start">
+                    <partial name="Boltz/_Fees" model="FeesModel.Standalone"/>
+                    <h5 class="mb-0">Wallet</h5>
+                    <partial name="Boltz/_Stats" model="stats"/>
+                    <div class="btn-group gap-0">
+                        <a asp-action="WalletReceive" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary">Receive</a>
+                        <a asp-action="WalletSend" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary @(balance?.Confirmed == 0 ? "disabled" : "")">Send</a>
+                        <a asp-action="WalletCredentials" asp-route-walletId="@walletId" asp-route-storeId="@storeId" class="btn btn-secondary">Show seed</a>
                     </div>
-                }
+                </div>
             </div>
         }
 
-        @if (chainRecommendation is not null)
+        @if (Model.Status is not null)
         {
-            var chain = new AutoSwapStatus
+            @if (Model.Ln is not null)
             {
-                SwapperType = SwapperType.Chain, Status = Model.Status.Chain
-            };
-            if (settings?.Mode == BoltzMode.Rebalance)
-            {
-                chain.Stats = new List<Stat>
-                {
-                    new() { Name = "From Wallet Balance", Value = chainRecommendation.WalletBalance.Total, Unit = Unit.Sat },
-                };
+                var ln = new AutoSwapStatus { SwapperType = SwapperType.Lightning, Status = Model.Status.Lightning };
+                <div class="widget d-flex gap-3 flex-column">
+                    <partial name="Boltz/_AutoSwapStatus" model="ln"/>
+                    @if (Model.Recommendations is not null)
+                    {
+                        <div>
+                            <h5>Recommendations</h5>
+                            <partial name="Boltz/_LightningRecommendations" model="Model.Recommendations.Lightning"></partial>
+                        </div>
+                    }
+
+                    @if (Model.Ln.SwapType != "normal")
+                    {
+                        var fees = new FeesModel { Pair = new Pair { From = Currency.Btc, To = Model.Ln.Currency }, SwapType = SwapType.Reverse };
+                        <div>
+                            <h5>Reverse Swap Info</h5>
+                            <partial name="Boltz/_Fees" model="fees"/>
+                        </div>
+                    }
+
+                    @if (Model.Ln.SwapType != "reverse")
+                    {
+                        var fees = new FeesModel { Pair = new Pair { From = Model.Ln.Currency, To = Currency.Btc }, SwapType = SwapType.Submarine };
+                        <div>
+                            <h5>Submarine Swap Info</h5>
+                            <partial name="Boltz/_Fees" model="fees"/>
+                        </div>
+                    }
+                </div>
             }
 
-            var fees = new FeesModel { Pair = new Pair { From = Currency.Lbtc, To = Currency.Btc }, SwapType = SwapType.Chain };
-
-            <div class="widget d-flex gap-3 flex-column">
-                <partial name="Boltz/_AutoSwapStatus" model="chain"/>
-                @if (chainRecommendation.Swap is not null)
+            @if (chainRecommendation is not null)
+            {
+                var chain = new AutoSwapStatus
                 {
-                    <div>
-                        <h5>Upcoming Swap</h5>
-                        <partial name="Boltz/_ChainRecommendations" model="chainRecommendation.Swap"/>
-                    </div>
+                    SwapperType = SwapperType.Chain, Status = Model.Status.Chain
+                };
+                if (settings?.Mode == BoltzMode.Rebalance)
+                {
+                    chain.Stats = new List<Stat>
+                    {
+                        new() { Name = "From Wallet Balance", Value = chainRecommendation.WalletBalance.Total, Unit = Unit.Sat },
+                    };
                 }
-                <div>
-                    <h5>Swap Info</h5>
-                    <partial name="Boltz/_Fees" model="fees"/>
+
+                var fees = new FeesModel { Pair = new Pair { From = Currency.Lbtc, To = Currency.Btc }, SwapType = SwapType.Chain };
+
+                <div class="widget d-flex gap-3 flex-column">
+                    <partial name="Boltz/_AutoSwapStatus" model="chain"/>
+                    @if (chainRecommendation.Swap is not null)
+                    {
+                        <div>
+                            <h5>Upcoming Swap</h5>
+                            <partial name="Boltz/_ChainRecommendations" model="chainRecommendation.Swap"/>
+                        </div>
+                    }
+                    <div>
+                        <h5>Swap Info</h5>
+                        <partial name="Boltz/_Fees" model="fees"/>
+                    </div>
                 </div>
-            </div>
+            }
         }
-    }
 
-    @if (Model.Swaps is not null)
-    {
-        var swaps = Model.Swaps;
-        var reverseSwaps = swaps.ReverseSwaps.ToList()
-            .Select(info => (info.Id, Type: SwapType.Reverse, info.Pair, info.State, info.Status, Amount: (ulong)info.OnchainAmount, info.CreatedAt)).ToList();
-        var normal = swaps.Swaps.ToList()
-            .Select(info => (info.Id, Type: SwapType.Submarine, info.Pair, info.State, info.Status, Amount: info.ExpectedAmount, info.CreatedAt));
-        var chain = swaps.ChainSwaps.ToList()
-            .Select(info => (info.Id, Type: SwapType.Chain, info.Pair, info.State, info.Status, info.FromData.Amount, info.CreatedAt));
-        reverseSwaps.AddRange(normal);
-        reverseSwaps.AddRange(chain);
-        reverseSwaps.Sort((a, b) => b.CreatedAt.CompareTo(a.CreatedAt));
-
-        @if (reverseSwaps.Count > 0)
+        @if (Model.Swaps is not null)
         {
-            <div class="widget">
-                <h4>Swaps</h4>
-                <div class="table-responsive my-0">
-                    <table class="table table-hover my-0">
-                        <thead>
-                        <tr>
-                            <th class="text-nowrap">ID</th>
-                            <th>Type</th>
-                            <th>From</th>
-                            <th>To</th>
-                            <th>Date</th>
-                            <th>State</th>
-                            <th class="text-nowrap">Status</th>
-                            <th>Amount</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        @foreach (var payment in reverseSwaps)
-                        {
-                            <tr>
-                                <td>@payment.Id</td>
-                                <td>@payment.Type</td>
-                                <td>@BoltzClient.CurrencyName(payment.Pair.From)</td>
-                                <td>@BoltzClient.CurrencyName(payment.Pair.To)</td>
-                                <td>@(DateTimeOffset.FromUnixTimeSeconds(payment.CreatedAt).ToBrowserDate())</td>
-                                <td>@payment.State</td>
-                                <td>@payment.Status</td>
-                                <td>@payment.Amount</td>
-                            </tr>
-                        }
+            var swaps = Model.Swaps;
+            var reverseSwaps = swaps.ReverseSwaps.ToList()
+                .Select(info => (info.Id, Type: SwapType.Reverse, info.Pair, info.State, info.Status, Amount: (ulong)info.OnchainAmount, info.CreatedAt)).ToList();
+            var normal = swaps.Swaps.ToList()
+                .Select(info => (info.Id, Type: SwapType.Submarine, info.Pair, info.State, info.Status, Amount: info.ExpectedAmount, info.CreatedAt));
+            var chain = swaps.ChainSwaps.ToList()
+                .Select(info => (info.Id, Type: SwapType.Chain, info.Pair, info.State, info.Status, info.FromData.Amount, info.CreatedAt));
+            reverseSwaps.AddRange(normal);
+            reverseSwaps.AddRange(chain);
+            reverseSwaps.Sort((a, b) => b.CreatedAt.CompareTo(a.CreatedAt));
 
-                        </tbody>
-                    </table>
+            @if (reverseSwaps.Count > 0)
+            {
+                <div class="widget">
+                    <h4>Swaps</h4>
+                    <div class="table-responsive my-0">
+                        <table class="table table-hover my-0">
+                            <thead>
+                            <tr>
+                                <th class="text-nowrap">ID</th>
+                                <th>Type</th>
+                                <th>From</th>
+                                <th>To</th>
+                                <th>Date</th>
+                                <th>State</th>
+                                <th class="text-nowrap">Status</th>
+                                <th>Amount</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            @foreach (var payment in reverseSwaps)
+                            {
+                                <tr>
+                                    <td>
+                                        <a asp-action="Status" asp-controller="Boltz" asp-route-storeId="@storeId" asp-route-swapId="@payment.Id">
+                                            @payment.Id
+                                        </a>
+                                    </td>
+                                    <td>@payment.Type</td>
+                                    <td>@BoltzClient.CurrencyName(payment.Pair.From)</td>
+                                    <td>@BoltzClient.CurrencyName(payment.Pair.To)</td>
+                                    <td>@(DateTimeOffset.FromUnixTimeSeconds(payment.CreatedAt).ToBrowserDate())</td>
+                                    <td>@payment.State</td>
+                                    <td>@payment.Status</td>
+                                    <td>@payment.Amount</td>
+                                </tr>
+                            }
+
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-            </div>
+            }
         }
-    }
-</div>
+    </div>
+}
