--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Fees.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Fees.cshtml
@@ -5,14 +5,7 @@
 @{
     var pairInfo = await BoltzService.GetPairInfo(Model.Pair!, Model.SwapType!.Value);
     if (pairInfo is null) return;
-
-    var stats = new List<Stat>
-    {
-        new() { Name = "Boltz Service Fee", Value = pairInfo.Fees.Percentage, Unit = Unit.Percent },
-        new() { Name = "Network Fee", Value = pairInfo.Fees.MinerFees, Unit = Unit.Sat },
-        new() { Name = "Min Amount", Value = pairInfo.Limits.Minimal, Unit = Unit.Sat },
-        new() { Name = "Max Amount", Value = pairInfo.Limits.Maximal, Unit = Unit.Sat },
-    };
+    var stats = BoltzService.PairStats(pairInfo);
 }
 
 <partial name="Boltz/_Stats" model="stats"/>
