--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/WalletReceive.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/WalletReceive.cshtml
@@ -61,13 +61,13 @@ else
     <form method="post" class="mt-3">
         <div id="SendTypeTablist" class="nav btcpay-pills align-items-center justify-content-center mb-3" role="tablist">
             <input asp-for="SendType" value="@SendType.Native" type="radio" id="SendType-@SendType.Native" data-bs-toggle="pill" data-bs-target="#@SendType.Native" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Native ? "true" : "false")" class="@(Model.SendType == SendType.Native ? "active" : "")">
-            <label for="@($"SendType-{SendType.Native}")">Native</label>
+            <label for="@($"SendType-{SendType.Native}")">@BoltzClient.CurrencyName(pair.From)</label>
 
             <input asp-for="SendType" value="@SendType.Lightning" type="radio" id="SendType-@SendType.Lightning" data-bs-toggle="pill" data-bs-target="#@SendType.Lightning" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Lightning ? "true" : "false")" class="@(Model.SendType == SendType.Lightning ? "active" : "")">
             <label for="@($"SendType-{SendType.Lightning}")">Lightning</label>
 
             <input asp-for="SendType" value="@SendType.Chain" type="radio" id="SendType-@SendType.Chain" data-bs-toggle="pill" data-bs-target="#@SendType.Chain" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Chain ? "true" : "false")" class="@(Model.SendType == SendType.Chain ? "active" : "")">
-            <label for="@($"SendType-{SendType.Chain}")">Chain</label>
+            <label for="@($"SendType-{SendType.Chain}")">@BoltzClient.CurrencyName(pair.To)</label>
         </div>
 
 
