chore: swap state wording changes

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/_SwapInfoPartial.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/_SwapInfoPartial.cshtml
@@ -179,7 +179,7 @@
 
         if (swap.Status == "transaction.server.mempool")
         {
-            instruction = "Waiting for confirmation of server lockup";
+            instruction = "Waiting for confirmation of Boltz lockup transaction";
             transaction = swap.ToData.LockupTransactionId;
             transactionCurrency = swap.Pair.From;
         }
