--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_LayoutSetup";
-    ViewData["Title"] = "How does it work";
+    ViewData["Title"] = "How does it work?";
 
     var storeId = Context.GetImplicitStoreId();
 }
